codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_first_actions.snap
---
source: tui/src/keymap_setup.rs
expression: snapshot
---
tab: All (82 selectable)
tab: Common (19 selectable)
tab: Customized (0) (0 selectable)
tab: Unbound (1) (1 selectable)
tab: App (6 selectable)
tab: Composer (3 selectable)
tab: Editor (16 selectable)
tab: Vim (34 selectable)
tab: Navigation (17 selectable)
tab: Approval (6 selectable)
Open Transcript | ctrl-t | Global open_transcript Open Transcript Open the transcript overlay. ctrl-t Default
Open External Editor | ctrl-g | Global open_external_editor Open External Editor Open the current draft in an external editor. ctrl-g Default
Copy | ctrl-o | Global copy Copy Copy the last agent response to the clipboard. ctrl-o Default
Toggle Vim Mode | unbound | Global toggle_vim_mode Toggle Vim Mode Turn Vim composer mode on or off. unbound Default
Edit Previous Message | esc | Chat edit_previous_message Edit Previous Message Begin or advance edit-previous-message when the composer is empty. esc Default
Confirm Edit Previous Message | enter | Chat confirm_edit_previous_message Confirm Edit Previous Message Confirm the selected previous message to edit. enter Default
Submit | enter | Composer submit Submit Submit the current composer draft. enter Default
Queue | tab | Composer queue Queue Queue the draft while a task is running. tab Default
Toggle Shortcuts | ?, shift-? | Composer toggle_shortcuts Toggle Shortcuts Show or hide the composer shortcut overlay. ?, shift-? Default
Insert Newline | ctrl-j, ctrl-m, enter, shift-enter | Editor insert_newline Insert Newline Insert a newline in the editor. ctrl-j, ctrl-m, enter, shift-enter Default
Move Left | left, ctrl-b | Editor move_left Move Left Move the cursor left. left, ctrl-b Default
Move Right | right, ctrl-f | Editor move_right Move Right Move the cursor right. right, ctrl-f Default
